<resources>
    <string name="app_name">Layouts_chain_text</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_x">X</string>
    <string name="minus">-</string>
    <string name="div">/</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="c">C</string>
    <string name="sign">+/-</string>
    <string name="percent">%</string>
    <string name="title">Калькулятор</string>
    <string name="decimal_point">.</string>
    <string name="a">A</string>
    <string name="v">V</string>
    <string name="o">O</string>
    <string name="n">N</string>
    <string name="i">I</string>
    <string name="m">M</string>
    <string name="r">R</string>
    <string name="e">E</string>
    <string name="p">P</string>
    <string name="point">.</string>
</resources>
