<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="26sp" />

    <LinearLayout
        android:id="@+id/layout_text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title">


        <EditText
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions_complex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_text_result"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/c"></Button>


        <Button
            android:id="@+id/btn_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/sign"></Button>

        <Button
            android:id="@+id/btn_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/percent"></Button>


    </LinearLayout>


    <FrameLayout
        android:id="@+id/letters_and_numbers_1_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actions_complex"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:id="@+id/numbers_from_1_to_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/actions_complex"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <LinearLayout
                android:id="@+id/numbers_1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumberClick"
                    android:text="@string/_1"></Button>

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumberClick"
                    android:text="@string/_2"></Button>

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumberClick"
                    android:text="@string/_3"></Button>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/numbers_4_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumberClick"
                    android:text="@string/_4"></Button>

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumberClick"
                    android:text="@string/_5"></Button>


                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumberClick"
                    android:text="@string/_6"></Button>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/numbers_7_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumberClick"
                    android:text="@string/_7"></Button>

                <Button
                    android:id="@+id/btn_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumberClick"
                    android:text="@string/_8"></Button>

                <Button
                    android:id="@+id/btn_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumberClick"
                    android:text="@string/_9"></Button>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/numbers_0_decimal_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_decimal_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNumberClick"
                    android:text="@string/decimal_point"></Button>

                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onNumberClick"
                    android:text="@string/_0"></Button>


            </LinearLayout>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="194dp"

            android:layout_alignStart="@+id/letters_and_numbers_1_0"
            android:layout_alignTop="@+id/letters_and_numbers_1_0">

            <TextView
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/point"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/P"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/p"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircle="@+id/point"
                app:layout_constraintCircleAngle="270"
                app:layout_constraintCircleRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/E"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/e"

                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircle="@+id/point"
                app:layout_constraintCircleAngle="305"
                app:layout_constraintCircleRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.143"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.057" />

            <TextView
                android:id="@+id/R"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/r"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircle="@+id/point"
                app:layout_constraintCircleAngle="338"
                app:layout_constraintCircleRadius="91dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m"

                android:textSize="20dp"
                app:layout_constraintCircle="@+id/point"
                app:layout_constraintCircleAngle="20"
                app:layout_constraintCircleRadius="90dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/I"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/i"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircle="@+id/point"
                app:layout_constraintCircleAngle="55"
                app:layout_constraintCircleRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/N"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/n"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircle="@+id/point"
                app:layout_constraintCircleAngle="89"
                app:layout_constraintCircleRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/O"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/o"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircle="@+id/point"

                app:layout_constraintCircleAngle="120"

                app:layout_constraintCircleRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/V"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/v"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircle="@+id/point"
                app:layout_constraintCircleAngle="180"
                app:layout_constraintCircleRadius="75dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.463"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/a"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircle="@+id/point"
                app:layout_constraintCircleAngle="240"
                app:layout_constraintCircleRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/actions_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_text_result"
        android:layout_toRightOf="@id/letters_and_numbers_1_0"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/_x"></Button>

        <Button
            android:id="@+id/btn_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/div"></Button>

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/minus"></Button>

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/plus"></Button>

        <Button
            android:id="@+id/btn_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/equals"></Button>

    </LinearLayout>


</RelativeLayout>